# Hakutaku

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  main.cpp  run-in-android.bat  run-on-android.bat
console/: main.cpp
core/: CMakeLists.txt  Hakutaku.cpp  Hakutaku.h  Hakutaku.hpp  Platform.cpp  Platform.h
core/include/: buffer_utils.h  exception.h  fuzzy.h  memory.h  proc.h  proc_listener.h  proc_maps.h  proc_pagemap.h  process.h  reader.h  searcher.h  searcher_parser.h  types.h  writer.h
core/src/: buffer_utils.cpp  fuzzy.cpp  memory.cpp  proc.cpp  proc_listener.cpp  proc_maps.cpp  proc_pagemap.cpp  process.cpp  reader.cpp  searcher.cpp  searcher_parser.cpp  writer.cpp
jni/: CMakeLists.txt  jni_proc.cpp  main.cpp
jni/include/: jni_utils.h
jni/src/: jni_utils.cpp
test/: fuzzy_search.cpp  get_maps.cpp  get_module_base.cpp  is_memory_trap.cpp  mem_tools.cpp  pidof.cpp  read_and_write.cpp  search_and_filter.cpp  set_mem_mode.cpp  stop_and_recover.cpp  test.cpp
